src/stylesheets/molecules/_legend.scss
.legend {
  list-style: none;
  margin: 0;
  padding: 0;

  &--scale {
    position: absolute;
    top: 2em;
    left: 1em;
    max-width: em(300);
  }

  &--donut {
    display: inline-block;
    margin-top: 0.5em;
    column-count: 2;
  }

  &__item {
    display: block;
    text-align: left;

    + #{&} {
      margin-top: em(5);
    }
  }

  &__scale,
  &__key,
  &__value,
  &__name {
    display: inline-block;
    vertical-align: middle;
  }

  &__key {
    width: em(20);
    height: em(20);
    background-color: $white;
  }

  &__value,
  &__name {
    @include rem(font-size, 12);
  }

  &__name {
    @include rem(padding-left,10);
  }

  &__scale {
    width: em(80);
    height: em(10);
    margin: 0 0.25em;
    border-radius: em(10);
    background: linear-gradient(to right, rgba($white, 0.1) 0%, $white 100%);
  }
}

